Progress on maketable / index page

--- a/public/table.html
+++ b/public/table.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
-    <link rel="stylesheet" type="text/css" href="cards.css" />
-  <script type="text/javascript" src="underscore-min.js"></script>
-  <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="cards.js"></script>
+    <link rel="stylesheet" type="text/css" href="/cards.css" />
+  <script type="text/javascript" src="/underscore-min.js"></script>
+  <script type="text/javascript" src="/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="/cards.js"></script>
   </head>
   <body onLoad="onBodyLoad()">
     <div class="pokertable">
@@ -40,8 +42,6 @@
     <div class="playerhand hand">
       <div class="card cardbg"></div>
       <div class="card cardbg"></div>
-      <div class="card spade1"></div>
-      <div class="card heart1"></div>
     </div>
   </script>
   </body>
