Signup email and add to Game struct done

--- a/public/table.html
+++ b/public/table.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="/tablerender.js"></script>
   <script type="text/javascript" src="/signup.js"></script>
-  <script type="text/javascript" src="/gamestate.js"></script>
+  <script type="text/javascript" src="/poker.js"></script>
   </head>
   <script type="text/template" id="tabletpl">
     <div class="pokertable">
@@ -46,7 +46,7 @@
     <form id="joingameform">
       <input type="text" name="DisplayName" placeholder="Display Name" value=""><br>
       <input type="text" name="Email" placeholder="Email Address" value=""><br><i>We only use your email address once, to send a sign-in link to, it is never saved..</i><br>
-      <button id="joingame">Join the Game</button>
+      <button id="joingame">Send Invitation to Email</button>
     </form>
     </div>
     <button id="leavegame" class="gamebutton">Leave the Game</button>
