--- a/public/table.html
+++ b/public/table.html
@@ -42,10 +42,10 @@
     <h3>Players currently involved:</h3>
     <ul id="signuplist">
     </ul><br>
-    <div id="joingamediv" style="width: 400px; padding: 0.5em; border: 1px solid black;">
+    <div class="invites" style="width: 400px; padding: 0.5em; border: 1px solid black;">
     <form id="joingameform">
       <input type="text" name="DisplayName" placeholder="Display Name" value=""><br>
-      <input type="text" name="Email" placeholder="Email Address" value=""><br><i>We only use your email address once, to send a sign-in link to, it is never saved..</i><br>
+      <input type="text" name="Email" placeholder="Email Address" value=""><br><i>We only use an email address once, to send an invite link to, it is never saved.</i><br>
       <button id="joingame">Send Invitation to Email</button>
     </form>
     </div>
@@ -53,7 +53,7 @@
     <button id="startgame" class="gamebutton">Start the Game!</button>
   </script>
   <script type="text/template" id="signupplayertpl">
-    <div class="playername"><%= DisplayName %><% if (POKER.PLAYER_ID == PlayerId) { %> (You!)<% } %></div>
+    <div class="playername"><%= DisplayName %><% if (Poker.PLAYER_ID == PlayerId) { %> (You!)<% } %></div>
     <div class="playerhand hand">
       <div class="card ha hk"></div>
     </div>
