--- a/public/table.html
+++ b/public/table.html
@@ -23,35 +23,46 @@
         <div class="playerpiles"><%= TableRenderer.ChipStack(player.Chips) %></div>
         <div class="playerstate"><%= player.State %></div>
         <div class="playerhand hand">
-        <% _.each(player.Hand, function(cardval) { %>
-          <div class="card <%= cardval %>"></div>
-        <% }); %>
+        <% if (player.PlayerId == Poker.PLAYER_ID) { %>
+          <% _.each(TableRenderer.DecryptMyHand(player.Hand), function(cardval) { %>
+            <div class="card <%= cardval %>"></div>
+          <% }); %>
+        <% } else { %>
+          <% _.each(TableRenderer.GetHand(player.Hand), function(cardval) { %>
+            <div class="card bg"></div>
+          <% }); %>
+        <% } %>
         </div>
       </div>
       <% if (player.Bet > 0) { %>
         <div class="<%= seat %>bet playerbet"><%= TableRenderer.ChipStack(player.Bet) %><tt class="betamt"><%= player.Bet %></tt></div>
       <% } %>
     <% } %>
-    <% if (table.Pot > 0) { %>
-      <div class="pot"><%= TableRenderer.ChipStack(table.Pot) %><tt class="betamt"><%= table.Pot %></tt></div>
-    <% } %>
-    <% if (table.Cards.board) { %>
-      <div class="board">
-      <% _.each(table.Cards.board, function(cardval) { %>
-        <div class="card <%= cardval %>"></div>
-      <% }); %>
-      </div>
+    <% if (table) { %>
+      <% if (table.Pot > 0) { %>
+        <div class="pot"><%= TableRenderer.ChipStack(table.Pot) %><tt class="betamt"><%= table.Pot %></tt></div>
+      <% } %>
+      <% if (table.Cards && table.Cards.board) { %>
+        <div class="board">
+        <% _.each(table.Cards.board, function(cardval) { %>
+          <div class="card <%= cardval %>"></div>
+        <% }); %>
+        </div>
+      <% } %>
     <% } %>
     </div>
   </script>
   <script type="text/template" id="tableview">
     <div id="tables"></div>
-    <div class="GameButtons">
-      <button class="gamecommand" name="Bet", data-amount="50">Bet 50</button>
-      <button class="gamecommand" name="Call">Call</button>
-      <button class="gamecommand" name="Fold">Fold</button>
-      <button class="gamecommand" name="Check">Check</button>
-    </div>
+    <div id="myhand" class="grow myhand"></div>
+    <div id="betplaque"></div>
+  </script>
+  <script type="text/template" id="myhandview">
+    <% _.each(TableRenderer.DecryptMyHand(player.Hand), function(cardval) { %>
+      <div class="card <%= cardval %>"></div>
+    <% }); %>
+  </script>
+  <script type="text/template" id="betplaqueview">
   </script>
   <script type="text/template" id="signupview">
     <h3>Players currently involved:</h3>
