Add full hand to log for winning hands. Fix A-5 straight

--- a/public/table.html
+++ b/public/table.html
@@ -62,6 +62,7 @@
   </script>
   <script type="text/template" id="tableview">
     <div id="tables"></div>
+      <div id="logscreen"></div>
     <% if (Poker.PLAYER) { %>
       <div id="lower">
         <div id="myhand" class="grow myhand"></div>
