Added pre-check and Folded indicators

--- a/public/table.html
+++ b/public/table.html
@@ -89,6 +89,7 @@
         <div id="myhand" class="grow myhand"></div>
         <div id="indicator" class="indicator"></div><br>
         <div id="betplaque" class="betplaque"></div>
+        <div id="indicatorbar" style="display:none;"><tt id="indication"></tt><button id="cancelindicate">(Oops, Cancel)</button></div>
       </div>
     <% } %>
   </script>
